ajuste de estilo

--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -15,12 +15,12 @@ dark = #777
 optional = #fa6b6b
 
 /* variables */
-breadcrumbClr = #e9e9e9
+breadcrumbClr = white
 shoppingCart = fontClr
 qtyCartClr = warning
 wSlider = 100% //width slidet home
 hSlider = 600px //slider for home height
-hSmallSlider = 500px //slider for products or small slider height
+hSmallSlider = 600px //slider for products or small slider height
 wSmallSlider = 100% //slider for products or small slider width
 hShopCart = 100px //shopcart image size height
 wShopCart = 100% //shopcart image size width
