--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -33,7 +33,7 @@
     box-shadow 0 3px 10px rgba(0,0,0,0.3)
 
 .btn-danger
-  button(white, danger, 3px, 5px 10px, 1px solid danger)
+  button(white, danger,0, 5px 10px, 1px solid danger)
   &:hover, &:focus
     background-color danger
     border 1px solid danger
@@ -46,12 +46,17 @@
     box-shadow 0 3px 10px rgba(0,0,0,0.3)
 
 .btn-dark
-  button(white, dark, 3px, 5px 10px, 1px solid dark)
+  button(white !important, black, 0px, 5px 10px, 1px solid black)
   &:hover, &:focus
-    background-color dark
-    border 1px solid dark
+    background-color black
+    border 1px solid black
     box-shadow 0 3px 10px rgba(0,0,0,0.3)
-
+.btn-white
+  button(fontClr, white, 0px, 5px 10px, 1px solid #ddd)
+  &:hover, &:focus
+    background-color white
+    border 1px solid #ddd
+    box-shadow 0 3px 10px rgba(0,0,0,0.3)
 .btn-black
   button(white, black, 3px, 5px 10px, 1px solid black)
   &:hover, &:focus
@@ -134,10 +139,11 @@
 
 /*------- Boxes -------*/
 .box
-  box(15px, none, 1px solid #f5f5f5, 3px)
+  box(15px, none, 1px solid white, 3px)
 
 .box-post-blog
-  background-color #f5f5f5
+  background-color white
+  border 1px solid black
   .box-container-post 
     padding 30px 100px 31px 15px
     text-align left
@@ -146,6 +152,7 @@
     background-repeat no-repeat
     height 400px 
     background-position center
+    border-left 1px solid black
 
 
 .box-simple
@@ -169,6 +176,9 @@
     margin-bottom 15px
     padding-top 15px 
     height 80px
+    border-bottom 1px solid #ddd
+    .box-title
+      font-weight bold
     p
       height 50px
       padding 10px
@@ -243,14 +253,14 @@
     width 50%
     margin 0 auto
     &:before
-      content '<'
+      content ''
       position absolute
       left 0
       color fontClr
       font-size 40px
       top -12px
     &:after
-      content '>'
+      content ''
       position absolute
       right 0
       color fontClr
@@ -262,6 +272,7 @@
     position absolute
     border 1px solid black
     width 100%
+
 
 .title
   padding 25px 0
@@ -445,7 +456,7 @@
   padding-top 0 !important
   padding-bottom 0
   .slider-img
-    background-position top
+    background-position center
     background-size wSlider
     background-repeat no-repeat
     height hSlider
