--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -154,7 +154,7 @@ md-input-container
   .bg-image-single
     background-size cover
     background-position center
-    height 300px
+    height 600px
   .box-description-detail-product
     padding 60px 0
     h4
@@ -395,3 +395,12 @@ footer
   md-content
     &._md
       max-height 240px
+.md-select-value      
+  padding 2px 8px 1px !important
+md-input-container > md-select
+  border 1px solid #ddd
+md-input-container .md-input
+  border 1px solid #ddd
+  padding 0 10px  
+md-input-container.md-default-theme:not(.md-input-invalid).md-input-focused .md-input, md-input-container:not(.md-input-invalid).md-input-focused .md-input, md-input-container.md-default-theme:not(.md-input-invalid).md-input-resized .md-input, md-input-container:not(.md-input-invalid).md-input-resized .md-input
+  border 1px solid black  
