--- a/app/css/main.css
+++ b/app/css/main.css
@@ -41,19 +41,36 @@ audio:not([controls]),
   color: #fa6b6b;
 }
 .one-rows-nav .first-row {
-  background-color: #fff;
+  background-color: #222;
+  background-image: url("../img/pattern.png");
+  background-repeat: repeat;
+}
+.one-rows-nav .first-row .text-danger {
+  padding: 3px 10px !important;
+  margin: 10px 0 0 10px;
+  background-color: #f00;
+  color: #fff !important;
+}
+.one-rows-nav .first-row md-input-container.md-icon-right > md-icon:last-of-type {
+  color: #fff;
+}
+.one-rows-nav .first-row md-input-container.md-default-theme .md-input::-webkit-input-placeholder,
+.one-rows-nav .first-row md-input-container .md-input::-webkit-input-placeholder {
+  color: #fff;
 }
 .one-rows-nav .first-row md-input-container.md-default-theme .md-input,
 .one-rows-nav .first-row md-input-container.md-default-theme>md-icon {
   border-color: #ccc;
+  color: #fff;
 }
 .one-rows-nav .first-row md-input-container .md-input {
   border: 1px solid #ccc;
   padding: 5px;
+  color: #fff;
 }
 .one-rows-nav .first-row .nav-link {
   font-size: 14px;
-  color: #555;
+  color: #fff;
   text-transform: uppercase;
   padding: 15px 8px;
 }
@@ -68,6 +85,7 @@ audio:not([controls]),
   border-top: 1px solid #ddd;
   box-shadow: 0 10px 10px rgba(0,0,0,0.1);
   z-index: 999;
+  padding: 0;
 }
 .one-rows-nav .nav-theme .navbar-brand {
   padding-right: 30px;
@@ -88,7 +106,7 @@ audio:not([controls]),
 }
 .three-rows-nav .first-row {
   padding: 15px 0;
-  background-color: transparent;
+  background-color: #000;
   border-bottom: 1px solid #ddd;
 }
 .three-rows-nav .first-row .dropdown-menu {
@@ -192,7 +210,7 @@ audio:not([controls]),
 .btn-danger {
   color: #fff;
   background: #ff4b7d;
-  border-radius: 3px;
+  border-radius: 0;
   padding: 5px 10px;
   border: 1px solid #ff4b7d;
 }
@@ -216,16 +234,29 @@ audio:not([controls]),
   box-shadow: 0 3px 10px rgba(0,0,0,0.3);
 }
 .btn-dark {
-  color: #fff;
-  background: #777;
-  border-radius: 3px;
+  color: #fff !important;
+  background: #000;
+  border-radius: 0px;
   padding: 5px 10px;
-  border: 1px solid #777;
+  border: 1px solid #000;
 }
 .btn-dark:hover,
 .btn-dark:focus {
-  background-color: #777;
-  border: 1px solid #777;
+  background-color: #000;
+  border: 1px solid #000;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.3);
+}
+.btn-white {
+  color: #555;
+  background: #fff;
+  border-radius: 0px;
+  padding: 5px 10px;
+  border: 1px solid #ddd;
+}
+.btn-white:hover,
+.btn-white:focus {
+  background-color: #fff;
+  border: 1px solid #ddd;
   box-shadow: 0 3px 10px rgba(0,0,0,0.3);
 }
 .btn-black {
@@ -370,11 +401,12 @@ audio:not([controls]),
 .box-default {
   padding: 15px;
   box-shadow: none;
-  border: 1px solid #f5f5f5;
+  border: 1px solid #fff;
   border-radius: 3px;
 }
 .box-post-blog {
-  background-color: #f5f5f5;
+  background-color: #fff;
+  border: 1px solid #000;
 }
 .box-post-blog .box-container-post {
   padding: 30px 100px 31px 15px;
@@ -385,6 +417,7 @@ audio:not([controls]),
   background-repeat: no-repeat;
   height: 400px;
   background-position: center;
+  border-left: 1px solid #000;
 }
 .box-simple {
   background-color: #fff;
@@ -409,6 +442,10 @@ audio:not([controls]),
   margin-bottom: 15px;
   padding-top: 15px;
   height: 80px;
+  border-bottom: 1px solid #ddd;
+}
+.box-simple .box-container .box-title {
+  font-weight: bold;
 }
 .box-simple .box-container p {
   height: 50px;
@@ -490,7 +527,7 @@ audio:not([controls]),
   margin: 0 auto;
 }
 .title-middle-line .text-content:before {
-  content: '<';
+  content: '';
   position: absolute;
   left: 0;
   color: #555;
@@ -498,7 +535,7 @@ audio:not([controls]),
   top: -12px;
 }
 .title-middle-line .text-content:after {
-  content: '>';
+  content: '';
   position: absolute;
   right: 0;
   color: #555;
@@ -574,7 +611,7 @@ audio:not([controls]),
   color: #ff4b7d;
 }
 .owl-theme-page .slider-page {
-  height: 500px;
+  height: 600px;
   background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
@@ -722,7 +759,7 @@ audio:not([controls]),
   padding-bottom: 0;
 }
 .slider-box .slider-img {
-  background-position: top;
+  background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
   height: 600px;
@@ -844,7 +881,7 @@ audio:not([controls]),
   height: 100px;
 }
 #breadcrumb {
-  background-color: #e9e9e9;
+  background-color: #fff;
   border-bottom: 1px solid #ddd;
 }
 #breadcrumb a {
@@ -852,7 +889,7 @@ audio:not([controls]),
 }
 #breadcrumb .breadcrumb {
   margin-bottom: 0;
-  background-color: #e9e9e9;
+  background-color: #fff;
 }
 .demo-select-header .demo-header-searchbox {
   width: 100%;
@@ -1352,6 +1389,47 @@ figure.effect-sadie:hover a {
   width: 24px;
   height: 12px;
 }
+.loader-container {
+  position: absolute;
+  top: 150px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loader-container .loader {
+  position: relative;
+  width: 100px;
+  height: 60px;
+  animation: rotateBox 2s linear infinite;
+}
+.loader-container .loader span {
+  position: absolute;
+  background: #000;
+  animation: scaleSides 2s linear infinite;
+}
+.loader-container .loader span:nth-of-type(1) {
+  width: 100%;
+  height: 2px;
+  left: 0;
+  top: 0;
+}
+.loader-container .loader span:nth-of-type(2) {
+  width: 2px;
+  height: 100%;
+  left: 0;
+  bottom: 0;
+}
+.loader-container .loader span:nth-of-type(3) {
+  width: 100%;
+  height: 2px;
+  right: 0;
+  bottom: 0;
+}
+.loader-container .loader span:nth-of-type(4) {
+  width: 2px;
+  height: 100%;
+  right: 0;
+  top: 0;
+}
 @-moz-keyframes sk-circleBounceDelay {
   0%, 80%, 100% {
     -webkit-transform: scale(0);
@@ -1560,6 +1638,166 @@ figure.effect-sadie:hover a {
     transform: rotate(45deg) scale(1);
   }
 }
+@-moz-keyframes rotateBox {
+  0% {
+    transform: rotate(0deg) scale(1);
+    width: 100px;
+    height: 60px;
+  }
+  20% {
+    transform: rotate(0deg);
+    width: 100px;
+    height: 60px;
+  }
+  60% {
+    transform: rotate(0deg);
+    width: 60px;
+    height: 60px;
+  }
+  100% {
+    transform: rotate(90deg);
+    width: 60px;
+    height: 100px;
+  }
+}
+@-webkit-keyframes rotateBox {
+  0% {
+    transform: rotate(0deg) scale(1);
+    width: 100px;
+    height: 60px;
+  }
+  20% {
+    transform: rotate(0deg);
+    width: 100px;
+    height: 60px;
+  }
+  60% {
+    transform: rotate(0deg);
+    width: 60px;
+    height: 60px;
+  }
+  100% {
+    transform: rotate(90deg);
+    width: 60px;
+    height: 100px;
+  }
+}
+@-o-keyframes rotateBox {
+  0% {
+    transform: rotate(0deg) scale(1);
+    width: 100px;
+    height: 60px;
+  }
+  20% {
+    transform: rotate(0deg);
+    width: 100px;
+    height: 60px;
+  }
+  60% {
+    transform: rotate(0deg);
+    width: 60px;
+    height: 60px;
+  }
+  100% {
+    transform: rotate(90deg);
+    width: 60px;
+    height: 100px;
+  }
+}
+@keyframes rotateBox {
+  0% {
+    transform: rotate(0deg) scale(1);
+    width: 100px;
+    height: 60px;
+  }
+  20% {
+    transform: rotate(0deg);
+    width: 100px;
+    height: 60px;
+  }
+  60% {
+    transform: rotate(0deg);
+    width: 60px;
+    height: 60px;
+  }
+  100% {
+    transform: rotate(90deg);
+    width: 60px;
+    height: 100px;
+  }
+}
+@-moz-keyframes scaleSides {
+  0% {
+    transform: scale(1);
+    margin: 0px;
+  }
+  20% {
+    transform: scale(1);
+    margin: 0px;
+  }
+  60% {
+    transform: scale(0.5);
+    margin: 10px;
+  }
+  100% {
+    transform: scale(1);
+    margin: 0px;
+  }
+}
+@-webkit-keyframes scaleSides {
+  0% {
+    transform: scale(1);
+    margin: 0px;
+  }
+  20% {
+    transform: scale(1);
+    margin: 0px;
+  }
+  60% {
+    transform: scale(0.5);
+    margin: 10px;
+  }
+  100% {
+    transform: scale(1);
+    margin: 0px;
+  }
+}
+@-o-keyframes scaleSides {
+  0% {
+    transform: scale(1);
+    margin: 0px;
+  }
+  20% {
+    transform: scale(1);
+    margin: 0px;
+  }
+  60% {
+    transform: scale(0.5);
+    margin: 10px;
+  }
+  100% {
+    transform: scale(1);
+    margin: 0px;
+  }
+}
+@keyframes scaleSides {
+  0% {
+    transform: scale(1);
+    margin: 0px;
+  }
+  20% {
+    transform: scale(1);
+    margin: 0px;
+  }
+  60% {
+    transform: scale(0.5);
+    margin: 10px;
+  }
+  100% {
+    transform: scale(1);
+    margin: 0px;
+  }
+}
 @media print {
   header,
   footer,
@@ -1739,7 +1977,7 @@ md-input-container {
 .temp-product-detail .bg-image-single {
   background-size: cover;
   background-position: center;
-  height: 300px;
+  height: 600px;
 }
 .temp-product-detail .box-description-detail-product {
   padding: 60px 0;
@@ -2019,6 +2257,22 @@ footer .contact-sty .download-app > i:hover {
 }
 .selectdemoSelectHeader md-content._md {
   max-height: 240px;
+}
+.md-select-value {
+  padding: 2px 8px 1px !important;
+}
+md-input-container > md-select {
+  border: 1px solid #ddd;
+}
+md-input-container .md-input {
+  border: 1px solid #ddd;
+  padding: 0 10px;
+}
+md-input-container.md-default-theme:not(.md-input-invalid).md-input-focused .md-input,
+md-input-container:not(.md-input-invalid).md-input-focused .md-input,
+md-input-container.md-default-theme:not(.md-input-invalid).md-input-resized .md-input,
+md-input-container:not(.md-input-invalid).md-input-resized .md-input {
+  border: 1px solid #000;
 }
 @media only screen and (min-width: 991px) and (max-width: 1024px) {
   .single_blog .comment-area {
@@ -2420,15 +2674,15 @@ figure.snip1190 p {
   transform: translateY(-20%) scale(0.7);
 }
 figure.snip1190 .square {
-  height: 78px;
-  width: 78px;
+  height: 90%;
+  width: 93%;
   overflow: hidden;
   position: absolute;
   top: 50%;
   left: 50%;
   content: '';
-  -webkit-transform: rotate(45deg) translate(-50%, -50%);
-  transform: rotate(45deg) translate(-50%, -50%);
+  -webkit-transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
   -webkit-transform-origin: 0 0;
   transform-origin: 0 0;
 }
@@ -2445,13 +2699,13 @@ figure.snip1190 .square div:after {
 }
 figure.snip1190 .square:before,
 figure.snip1190 .square:after {
-  width: 65%;
+  width: 100%;
   height: 2px;
 }
 figure.snip1190 .square div:before,
 figure.snip1190 .square div:after {
   width: 2px;
-  height: 65%;
+  height: 100%;
 }
 figure.snip1190 .square:before,
 figure.snip1190 .square div:before {
@@ -2490,17 +2744,17 @@ figure.snip1190.hover p {
 }
 figure.snip1190:hover .square:before,
 figure.snip1190.hover .square:before {
-  width: 38%;
+  width: 50%;
 }
 figure.snip1190:hover .square div:before,
 figure.snip1190.hover .square div:before {
-  height: 38%;
+  height: 50%;
 }
 figure.snip1190:hover .square:after,
 figure.snip1190.hover .square:after {
-  width: 55%;
+  width: 50%;
 }
 figure.snip1190:hover .square div:after,
 figure.snip1190.hover .square div:after {
-  height: 55%;
+  height: 50%;
 }
