--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,6 +14,20 @@
     <section class="section-one">
         <div class="container">
             <div class="row">
+                <div class="col-sm-12" ng-repeat="item in Home.seasonsSell">
+                    <figure class="snip1190">
+                        <div class="img-caption"
+                                style="background-image: url('{{item.featuredImage.url ? item.featuredImage.url : initConfig.img_default}}');"></div>
+                        <figcaption>
+                            <div class="square">
+                                <div></div>
+                            </div>
+                            <h2>{{ item.title }}</h2>
+                            <p>{{item.excerpt}}</p>
+                        </figcaption>
+                        <a post-link="{ link: {url: item.link, target: '_self'} }"></a>
+                    </figure>
+                </div>
                 <div class="col-sm-6" ng-repeat="item in Home.categoryProd">
                     <figure class="snip1190">
                         <div class="img-caption"
@@ -36,7 +50,7 @@
         <div class="container">
             <div class="title-middle-line">
                 <div class="text-content">
-                    <h1 class="font-type">Lo nuevo</h1>
+                    <h1 class="font-type">Novedades</h1>
                 </div>
                 <hr>
             </div>
@@ -55,7 +69,7 @@
                     <div class="box-container">
                         <div class="row align-items-center">
                             <div class="col-sm-6">
-                                <h6>{{ product.name | limitTo:40}}</h6>
+                                <p class="box-title">{{ product.name | limitTo:40}}</p>
                             </div>
                             <div class="col-sm-6">
                                 <p>{{ product.price | currency }}</p>
@@ -64,15 +78,15 @@
                     </div>
                     <div class="box-footer">
                         <div class="row">
-                            <div class="col-sm-12">
-                                <a ui-sref="product-detail({slug:product.slug})" class="btn btn-block btn-default">Ver
+                            <div class="col-sm-8">
+                                <a ui-sref="product-detail({slug:product.slug})" class="btn btn-block btn-white">Ver
                                     más</a>
                             </div>
-                            <!--<div class="col-sm-4">
+                            <div class="col-sm-4">
                                 <button ng-click="Shop.showPreviewItem($event, product)"
-                                        class="btn btn-optional btn-block"><i class="fa fa-shopping-cart"></i>
+                                        class="btn btn-dark btn-block"><i class="fa fa-shopping-cart"></i>
                                 </button>
-                            </div>-->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -87,7 +101,7 @@
                     <article class="box-container-post">
                         <h3 class="text-uppercase">{{post.title}}</h3>
                         <p>{{post.excerpt}}</p>
-                        <a href="{{post.link}}">Visita nuestro blog <i class="fa fa-angle-right"></i></a>
+                        <a href="{{post_detail({slug: post.slug})}}" class="btn btn-dark">Visita nuestro blog <i class="fa fa-angle-right"></i></a>
                     </article>
                 </div>
                 <div class="col-sm-6 col-6 no-padding">
