--- a/app/templates/partials/options-group.html
+++ b/app/templates/partials/options-group.html
@@ -1,6 +1,6 @@
-<div ng-repeat="option in Product.detail.metadata.groups | orderBy: 'level'">
-    <md-input-container style="width: 100%">
-        <label ng-if="option.kind === 'size'">Medida</label>
+<div class="col-sm-6" ng-repeat="option in Product.detail.metadata.groups | orderBy: 'level'">
+    <md-input-container style="width: 100%"> 
+        <label ng-if="option.kind === 'size'">Talla</label>
         <label ng-if="option.kind === 'color'">Color</label>
         <label ng-if="option.kind === 'style'">Estilo</label>
         <md-select ng-model="Product.optionSelected[$index]" required name="size" ng-change="Product.getProductFromGroup()">
