ajuste de estilo general

--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -8,7 +8,7 @@
 primary = #03A9F4
 info = #00bcd4
 success = #85ce88
-danger = #ff4b7d
+danger = #ff4b4b
 warning = #ff9039
 default = #ddd
 dark = #777
@@ -34,3 +34,5 @@ mainColor = white //color of nav
 footerTopClr = #ccc
 footerClr = #999
 linkClr = #999
+/*tabs*/
+tabClr = #ff4b4b
