--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -154,7 +154,14 @@
     background-position center
     border-left 1px solid black
 
-
+.box-temp-contact
+  background-color white
+  border 1px solid #ddd
+  padding 15px
+  md-input-container
+    margin 5px 0
+    .nav li a p 
+      font-size 18px
 .box-simple
   @extend .box
   background-color white
@@ -248,7 +255,7 @@
     position absolute
     left 0
     right 0
-    z-index: 999
+    z-index 9
     background white
     width 50%
     margin 0 auto
@@ -474,11 +481,11 @@
     padding 15px
     background-color transparent
   .nav-item.active
-    color optional
+    color tabClr
     background-color transparent
-    border-bottom 1px solid optional
+    border-bottom 1px solid tabClr
   .nav-tabs .nav-link.active
-    color optional
+    color tabClr
   .nav-tabs .nav-link
     border-top none
     border-left none
@@ -489,7 +496,7 @@
       border-top none
       border-left none
       border-right none
-      color danger
+      color tabClr
       background-color transparent
 
 /* --- WIDGETS  ---  */
