--- a/app/css/core/loader.styl
+++ b/app/css/core/loader.styl
@@ -3,9 +3,8 @@
   width 100%
   height 100%
   opacity 1
-  background #D3CCE3  /* fallback for old browsers */
-  background -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3)  /* Chrome 10-25, Safari 5.1-6 */
-  background linear-gradient(to right, #E9E4F0, #D3CCE3) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background white  /* fallback for old browsers */
+  
 .block-ui-message
   background transparent
 
