--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,74 +1,79 @@
 <div class="temp-contact">
-    <div class="header-title-large">
-        <div class="container">
-            <h1 class="text-uppercase">Contáctanos</h1>
-        </div>
-    </div>
     <section class="content-area">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <div class="list-icons-add" ng-repeat="post in contactData">
-                        <a class="nav-link" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i>
-                            <span ng-bind-html="post.content | trustHtml"></span></a>
-                    </div>
-                    <hr>
-                    <h4 class="widget-title">Síguenos en</h4>
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm-6 list-icons-add" ng-repeat="social in socialMedia">
-                            <a class="nav-link" href="{{ social.excerpt }}"><i class="{{ social.title }}"></i> <span
-                                    ng-bind-html="social.content | trustHtml"></span></a>
-                        </div>
-                    </div>
+                <div class="col-md-12 text-center">
+                    <h1>Contáctanos</h1>
                 </div>
-                <div class="col-md-6 items-dashboard">
-                    <form class="form-horizontal" ng-submit="Contact.createNotification('CONTACT_FORM')"
-                          ng-init="Contact.notification.subject = 'Formulario de contacto'">
-                        <div class="container-fluid">
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <md-input-container md-no-float class="md-block">
-                                        <input type="text" id="name" name="name"
-                                               placeholder="Nombre"
-                                               required ng-model="Contact.notification.name">
-                                    </md-input-container>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <md-input-container md-no-float class="md-block">
-                                        <input type="email" id="email" name="email"
-                                               placeholder="Email" required
-                                               ng-model="Contact.notification.email">
-                                    </md-input-container>
-                                </div>
-                                <div class="col-sm-6">
-                                    <md-input-container md-no-float class="md-block">
-                                        <input type="text" id="phone" name="phone"
-                                               placeholder="Teléfono" required
-                                               ng-model="Contact.notification.phone">
-                                    </md-input-container>
-                                </div>
-                            </div>
+                <div class="col-md-6">
+                    <div class="box-temp-contact">
+                        <h4 class="widget-title">Escríbenos</h4>
+                        <hr>
+                        <div class="list-icons-add" ng-repeat="post in contactData">
+                            <a class="nav-link" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i>
+                                <span ng-bind-html="post.content | trustHtml"></span></a>
                         </div>
-                        <div class="col-md-12">
-                            <md-input-container class="md-block">
-                                <textarea class="form-control" id="message" name="message"
-                                          placeholder="Escribe tu mensaje *" required
-                                          ng-model="Contact.notification.message"
-                                          rows="5" md-select-on-focus></textarea>
-                            </md-input-container>
-
-                            <div style="text-align: right;">
-                                <button type="submit" class="btn btn-danger" ng-disabled="Contact.busy">
-                                    Enviar <span ng-if="Contact.busy"><i
-                                        class="fa fa-spinner fa-spin"></i></span>
-                                </button>
-
-                            </div>
+                        <hr>
+                        <h4 class="widget-title">Redes sociales</h4>
+                        <hr>
+                        <div class="row">
+                            <ul class="nav">
+                                <li class="nav-item" ng-repeat="social in socialMedia">
+                                    <a class="nav-link" href="{{ social.excerpt }}"><span
+                                        ng-bind-html="social.content | trustHtml"></span></a>
+                                </li>
+                            </ul>
                         </div>
-                    </form>
+                    </div>                    
+                </div>
+                <div class="col-md-6">
+                    <div class="box-temp-contact">
+                            <form class="form-horizontal" ng-submit="Contact.createNotification('CONTACT_FORM')"
+                            ng-init="Contact.notification.subject = 'Formulario de contacto'">
+                          <div class="container-fluid">
+                              <div class="row">
+                                  <div class="col-sm-12">
+                                      <md-input-container md-no-float class="md-block">
+                                          <input type="text" id="name" name="name"
+                                                 placeholder="Nombre"
+                                                 required ng-model="Contact.notification.name">
+                                      </md-input-container>
+                                  </div>
+                              </div>
+                              <div class="row">
+                                  <div class="col-sm-6">
+                                      <md-input-container md-no-float class="md-block">
+                                          <input type="email" id="email" name="email"
+                                                 placeholder="Email" required
+                                                 ng-model="Contact.notification.email">
+                                      </md-input-container>
+                                  </div>
+                                  <div class="col-sm-6">
+                                      <md-input-container md-no-float class="md-block">
+                                          <input type="text" id="phone" name="phone"
+                                                 placeholder="Teléfono" required
+                                                 ng-model="Contact.notification.phone">
+                                      </md-input-container>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="col-md-12">
+                              <md-input-container class="md-block">
+                                  <textarea class="form-control" id="message" name="message"
+                                            placeholder="Escribe tu mensaje *" required
+                                            ng-model="Contact.notification.message"
+                                            rows="5" md-select-on-focus></textarea>
+                              </md-input-container>
+  
+                              <div style="text-align: right;">
+                                  <button type="submit" class="btn btn-danger" ng-disabled="Contact.busy">
+                                      Enviar <span ng-if="Contact.busy"><i
+                                          class="fa fa-spinner fa-spin"></i></span>
+                                  </button>  
+                              </div>
+                          </div>
+                      </form>
+                    </div>                    
                 </div>
             </div>
     </section>
