--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -101,7 +101,7 @@
                     <article class="box-container-post">
                         <h3 class="text-uppercase">{{post.title}}</h3>
                         <p>{{post.excerpt}}</p>
-                        <a href="{{post_detail({slug: post.slug})}}" class="btn btn-dark">Visita nuestro blog <i class="fa fa-angle-right"></i></a>
+                        <a ui-sref="post_detail({slug:post.slug})" class="btn btn-dark">Visita nuestro blog <i class="fa fa-angle-right"></i></a>
                     </article>
                 </div>
                 <div class="col-sm-6 col-6 no-padding">
