ajuste de estilo

--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -127,6 +127,28 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .one-rows-nav .first-row .nav-item
+    margin 0 8px
+  .navbar-collapse 
+    position absolute
+    top 75px
+    background white
+    width 100%
+    border-top 1px solid rgb(221, 221, 221)
+    padding 20px
+    border-bottom 1px solid rgb(221, 221, 221)
+    box-shadow rgba(0, 0, 0, 0.3) 0px 6px 10px
+  .box-post-blog
+    .img-post 
+      height 200px
+    h3 
+      font-size 14px
+    .btn-dark 
+      font-size 12px   
+    p
+      display none
+  figure.snip1190 h2
+    font-size 28px
   #home .section-one, #home .section-two, #home .section-four, 
   #home .section-five, #home .section-six, #home .section-seven
     padding 30px 0
@@ -143,7 +165,6 @@
     color fontClr
   .one-rows-nav
     .first-row
-      background-color #f5f5f5
       .navbar-nav
         flex-direction row
         justify-content center !important
@@ -166,11 +187,12 @@
     margin-left 0
     top 5px
     .qty-cart
-      background-color #f5f5f5
+      background-color black
       top 0
       left 10px
+      color white
     i
-      color black
+      color white
   .xs-hidde
     display none
 
@@ -231,11 +253,7 @@
       padding-top 10px
       padding-bottom 10px
   /* SECTION ONE */
-  .section-three
-    h3 
-      font-size 18px
-    p 
-      font-size 14px  
+  .section-three 
     .box-post-blog .box-container-post
       padding 15px 0
   .section-two
