--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -186,9 +186,10 @@
     border-bottom 1px solid #ddd
     .box-title
       font-weight bold
+      font-size 12px
     p
       height 50px
-      padding 10px
+      padding 10px 0
   .box-footer
     text-align center
   &:hover
