--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -42,9 +42,13 @@
     background-color #222
     background-image url(../img/pattern.png)
     background-repeat repeat
+    .btn-link
+      color white
+      text-decoration none
+      margin 5px 0
     .text-danger
       padding 3px 10px !important
-      margin 10px 0 0 10px
+      margin 10px 0
       background-color red
       color white !important
     md-input-container.md-icon-right > md-icon:last-of-type
