fix show groups

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -78,14 +78,8 @@
                     </div>
                     <div class="box-footer">
                         <div class="row">
-                            <div class="col-sm-8">
-                                <a ui-sref="product-detail({slug:product.slug})" class="btn btn-block btn-white">Ver
-                                    más</a>
-                            </div>
-                            <div class="col-sm-4">
-                                <button ng-click="Shop.showPreviewItem($event, product)"
-                                        class="btn btn-dark btn-block"><i class="fa fa-shopping-cart"></i>
-                                </button>
+                            <div class="col-sm-12">
+                                <a ui-sref="product-detail({slug:product.slug})" class="btn btn-block btn-white">Comprar</a>
                             </div>
                         </div>
                     </div>
