--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -20,17 +20,26 @@
                                                      style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
                                             </div>
                                             <div class="box-container">
-                                                <p class="box-title">{{ product.name | limitTo: 30 }}</p>
-                                                <h4>{{ product.price | currency }}</h4>
+                                                <div class="row align-items-center">
+                                                    <div class="col-sm-8">
+                                                        <p>{{ product.name | limitTo:40}}</p>
+                                                    </div>
+                                                    <div class="col-sm-4">
+                                                        <p>{{ product.price | currency }}</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="box-footer">
+                                                <div class="row"> 
+                                                    <div class="col-sm-12">
+                                                        <a ui-sref="product-detail({slug:product.slug})" class="btn btn-block btn-white">Comprar</a>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </a>
-                                        <div class="box-footer">
-                                            <a ui-sref="product-detail({slug:product.slug})">Ver
-                                                más</a>
-                                        </div>
                                     </div>
-
-                                    <div class="box-prod" ng-if="Search.isPost">
+    
+                                    <div class="box-prod" ng-if="Product.isPost">
                                         <a ui-sref="post_detail({slug:product.slug})">
                                             <div class="bg-prod"
                                                  style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default }}')"></div>
